tests/valid/case3.js
module.exports = [
    // Valid case 3-1
    {
        data: {
            "student": "studentA@example.com",    
        },
        result: {
            statusCode: 204,
            body: undefined,
        }
    }
]